about me section

--- a/index.html
+++ b/index.html
@@ -26,40 +26,21 @@
         </section>
         <section class="expertise">
             <div>
-                <h2>How I like to work</h2>
+                <h2>I'm a front-end web developer based in Leeds. With eleven years of experience I develop responsive, high-performance websites.</h2>
                 <div>
                     <div>
-                        <h3>Frontend</h3>
-                        <ul>
-                            <li>HTML5</li>
-                            <li>
-                                CSS
-                                <span>Responsive, SASS, Mobile First</span>
-                            </li>
-                            <li>
-                                Javascript
-                                <span>ES6, React, jQuery, Backbone, Jasmine, Knockout</span>
-                            </li>
-                        </ul>
+                        <h3>Frontend Development</h3>
+                        <p>I like to build websites mobile-first with HTML5, SASS and have experience with a host of Javascript libraries including jQuery, React and Backbone (amongst others).</p>
+                        <p>I also like to compile and manage frontend resources using NodeJS and webpack (and test using Jasmine when necessary). Most recently I have started implementing bleeding edge ES6/ES7 features into my code.</p>
                     </div>
                     <div>
-                        <h3>Backend</h3>
-                        <ul>
-                            <li>NodeJS</li>
-                            <li>Docker</li>
-                            <li>PHP</li>
-                            <li>MySQL</li>
-                            <li>APIs (RESTful)</li>
-                        </ul>
+                        <h3>Backend Development</h3>
+                        <p>I like to build websites on Docker with a full CI integration. I have excellent knowledge of PHP and MySQL. I also like to manage backend dependencies using Composer.</p>
                     </div>
                     <div>
-                        <h3>Other</h3>
-                        <ul>
-                            <li>Composer</li>
-                            <li>Magento</li>
-                            <li>CI</li>
-                            <li>CMS</li>
-                        </ul>
+                        <h3>Other skills</h3>
+                        <p>I have worked extensively with Magento eCommerce and also have experience with wordpress.</p>
+                        <p>Last but not least... I use Git for everything!</p>
                     </div>
                 </div>
             </div>
@@ -88,11 +69,13 @@
             </div>
         </section>
         <footer>
-            <p class="copyright">Michael Windell &copy; 2017<br>Full Stack Web Developer</p>
-            <div class="social">
-                <a href="https://github.com/minlare" class="fa fa-github fa-2x"></a>
-                <a href="https://www.linkedin.com/in/michael-windell-b62a5610" class="fa fa-linkedin-square fa-2x"></a>
-                <a href="https://stackexchange.com/users/4534812/minlare" class="fa fa-stack-overflow fa-2x"></a>
+            <div>
+                <p class="copyright">Michael Windell &copy; 2017<br>Full Stack Web Developer</p>
+                <div class="social">
+                    <a href="https://github.com/minlare" class="fa fa-github fa-2x"></a>
+                    <a href="https://www.linkedin.com/in/michael-windell-b62a5610" class="fa fa-linkedin-square fa-2x"></a>
+                    <a href="https://stackexchange.com/users/4534812/minlare" class="fa fa-stack-overflow fa-2x"></a>
+                </div>
             </div>
         </footer>
     </body>
